plugins {
	id 'fabric-loom' version "${loom_version}"
  id 'com.github.johnrengelman.shadow' version '7.1.2'
	id 'maven-publish'
}

configurations {
  shade {
    canBeResolved = true
    canBeConsumed = false
  }
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
  // Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

  shade 'org.yaml:snakeyaml:2.2'
  implementation 'org.yaml:snakeyaml:2.2'
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

shadowJar {
  configurations = [project.configurations.shade]
  archiveClassifier.set('dev-shadow')
}

remapJar {
  dependsOn shadowJar
  input.set shadowJar.archiveFile
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
  exclude 'module-info.class'

//	inputs.property "archivesName", project.base.archivesName
//
//	from("LICENSE") {
//		rename { "${it}_${inputs.properties.archivesName}"}
//	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
